--- a/2021-1/beamer/C02_md1.tex
+++ b/2021-1/beamer/C02_md1.tex
@@ -1,9 +1,9 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
 
 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -118,10 +118,10 @@
     \frametitle{}
 
     \begin{itemize}
-        \item El orden natural de los enteros es tan importante como sus propiedades aritméticas. \vskip .4cm
-        \item Expresamos la idea de orden formalmente diciendo que existe una relación que indicamos ``$<$''.\vskip .4cm
+        \item El orden natural de los enteros es tan importante como sus propiedades aritméticas.\pause \vskip .4cm
+        \item Expresamos la idea de orden formalmente diciendo que existe una relación que indicamos ``$<$''.\vskip .4cm \pause
         \item Solo cuatro axiomas se necesitan para especificar las propiedades básicas del símbolo $<$. 
-    \end{itemize}
+    \end{itemize}\pause
 
     \vskip .4cm\vskip .4cm
 
@@ -142,16 +142,16 @@
 
 \begin{frame}
     \frametitle{Axiomas de orden}
-
+    \pause 
     \begin{enumerate}[label=\textbf{I\arabic*)}, ref=\textbf{I\arabic*}]
-        \item \label{axioma-i8} {\em Ley de tricotomía.}\, Vale una y sólo una de las relaciones
+        \item[\textbf{I8)}] \label{axioma-i8} {\em Ley de tricotomía.}\, Vale una y sólo una de las relaciones
     siguientes:
     $$
     a<b, \qquad a = b, \qquad b < a.
-    $$
-    \item \label{axioma-i9} {\em Ley transitiva.}\, Si $a< b$ y $b < c$, entonces $a<c$.
-    \item \label{axioma-i10} {\em Compatibilidad de la suma con el orden.}\, Si $a < b$, entonces $a+c < b+c$. 
-    \item \label{axioma-i11} {\em Compatibilidad del producto con el orden.}\, Si $a< b$ y $0< c$, entonces $ac < bc$. 
+    $$\pause 
+    \item[\textbf{I9)}] \label{axioma-i9} {\em Ley transitiva.}\, Si $a< b$ y $b < c$, entonces $a<c$.\pause 
+    \item[\textbf{I10)}] \label{axioma-i10} {\em Compatibilidad de la suma con el orden.}\, Si $a < b$, entonces $a+c < b+c$. \pause 
+    \item[\textbf{I11)}] \label{axioma-i11} {\em Compatibilidad del producto con el orden.}\, Si $a< b$ y $0< c$, entonces $ac < bc$. 
     \end{enumerate}
 
     \vskip 2cm
@@ -161,12 +161,12 @@
 \begin{frame}
     \frametitle{}
     Esta claro que podemos definir los otros símbolos de orden $>$, $\le$ y $\ge$, en términos de los símbolos $<$ e $=$. 
-    \vskip 1cm
+    \vskip 1cm\pause 
     \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
     \begin{beamercolorbox}[wd=\textwidth,rounded=true,shadow=true]{postit}%
         \begin{itemize}
-            \item \textbf{($>$)} Diremos que $m>n$ si  $n<m$.\vskip .4cm
-            \item \textbf{($\le$)} Diremos que $m \le n$ si $m<n$ o $m=n$. \vskip .4cm
+            \item \textbf{($>$)} Diremos que $m>n$ si  $n<m$.\vskip .4cm\pause 
+            \item \textbf{($\le$)} Diremos que $m \le n$ si $m<n$ o $m=n$. \vskip .4cm\pause 
             \item \textbf{($\ge$)} Diremos que $m \ge n$ si $m > n$ o $m=n$.\vskip .4cm
         \end{itemize}
     \end{beamercolorbox}
@@ -180,16 +180,16 @@
 \begin{frame}
     \frametitle{}
     
-    Es importante notar que el  axioma (\textbf{I11}) tiene una versión valedera para estos nuevos símbolos.\vskip 0.5cm
+    Es importante notar que el  axioma (\textbf{I11}) tiene una versión valedera para estos nuevos símbolos.\vskip 0.5cm\pause 
     \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
     \begin{beamercolorbox}[wd=\textwidth,rounded=true,shadow=true]{postit}%
     \begin{itemize}
-    \item \textbf{($>$)} Si $a > b$ y $c>0$, entonces $ac > bc$.\vskip .4cm
-    \item \textbf{($\le$)} Si $a \le b$ y $0 \le c$, entonces $ac \le bc$.\vskip .4cm
+    \item \textbf{($>$)} Si $a > b$ y $c>0$, entonces $ac > bc$.\vskip .4cm\pause 
+    \item \textbf{($\le$)} Si $a \le b$ y $0 \le c$, entonces $ac \le bc$.\vskip .4cm\pause 
     \item \textbf{($\ge$)} Si $a\ge b$ y $c\ge 0$, entonces $ac \ge bc$.\vskip .4cm
     \end{itemize}
     \end{beamercolorbox}
-    \vskip 0.5cm
+    \vskip 0.5cm\pause 
     Usando las definiciones de $\ge$, $<$, $>$ y el axioma (\textbf{I11}) original es muy sencillo demostrar estas variantes.
 \end{frame}
 
@@ -197,8 +197,8 @@
 \begin{frame}
     \frametitle{}
     
-    El axioma (\textbf{I11}) tiene nuevas variante cuando consideramos la multiplicación de una desigualdád por enteros negativos.
-
+    El axioma (\textbf{I11}) tiene nuevas variantes cuando consideramos la multiplicación de una desigualdád por enteros negativos.
+    \pause 
     \vskip .5cm
     
 \begin{proposicion}\label{prop-compatibilidad-negativa}
@@ -208,11 +208,11 @@
         \item\label{it.amenorb} Si $a< b$ y $c< 0$, entonces $ac > bc$. 
     \end{enumerate}
 \end{proposicion}
-
+\pause 
 \vskip .5cm
 
 La demostración pueden verla en el apunte (proposición 1.2.1). 
-
+\pause 
 \vskip 0.5cm
 
 Usando  esta proposición y la definición  de $>$, $\le$, $\ge$ podemos hacer más variantes del  axioma (\textbf{I11}) (¡$16$ en total!). Todas ellas bastante obvias.
@@ -229,9 +229,9 @@ Usando  esta proposición y la definición  de $>$, $\le$, $\ge$ podemos hacer m
         $$
         a\ge  b\; \wedge\; c < 0 \quad \Rightarrow \quad ac \le bc. 
         $$
-    \end{ejemplo}
+    \end{ejemplo}\pause 
 
-    \begin{proof}
+    \begin{proof}\pause 
         Como $a\ge  b$,  tenemos que $ a >b$ o $a=b$. 
         \vskip 0.5cm
         Si $a>b$,  entonces $b < a$. Como  $c < 0$ $\Rightarrow$ $bc > ac$ $\Rightarrow$  $ac < bc$ $\Rightarrow$ $ac \le bc$.
@@ -245,11 +245,11 @@ Usando  esta proposición y la definición  de $>$, $\le$, $\ge$ podemos hacer m
 \begin{frame}
     \frametitle{}
     Ya hemos usado (en axioma \textbf{I4}) el símbolo $\not=$ que denota  ``{\em no} es igual a '' o bien ``es distinto a''.   En  general, cuando tachemos un símbolo, estamos indicando la negación de la relación que define. Por ejemplo, $a\not< b$ denota ``$a$ {\em no} es menor que $b$''. 
-
+    \pause 
 \begin{observacion*} Demostremos que  $a\not< b$ es equivalente a $a\ge b$: por la ley de tricotomía axioma (\textbf{I8}) tenemos que solo vale una y solo una de las siguientes afirmaciones
 $$
 a<b, \qquad a = b, \qquad b < a.
-$$
+$$\pause 
 Como  $a\not< b$, entonces vale una de las dos afirmaciones siguientes, $a=b$ o $b<a$, es decir  vale que $a \ge b$. De forma análoga se prueba que $a\not\le b$ si  y sólo si $a>b$, $a\not> b$ si  y sólo si $a \le b$ y $a\not\ge b$ si  y sólo si $a<b$.
 
 \end{observacion*}
@@ -259,24 +259,24 @@ Como  $a\not< b$, entonces vale una de las dos afirmaciones siguientes, $a=b$ o 
 
 \begin{frame}
     \frametitle{$\le$ es una relación de orden}        
-    
+    \pause 
     Sean  $a$, $b$ y $c$  enteros arbitrarios. Es posible demostrar las siguiente propiedades de $\le$:  
     \vskip .5cm
         \begin{enumerate}
-        \item[\textbf{O1)}] {\em Reflexividad.}\, $a \le a$.
-        \item[\textbf{O2)}] {\em Antisimetría.}\, Si $a \le b$ y $b \le a$, entonces $a=b$.
-        \item[\textbf{O3)}] {\em Transitividad.}\, Si $a\le b$ y $b\le c$, entonces $a \le c$.
+        \item[\textbf{O1)}] {\em Reflexividad.}\, $a \le a$.\pause 
+        \item[\textbf{O2)}] {\em Antisimetría.}\, Si $a \le b$ y $b \le a$, entonces $a=b$.\pause 
+        \item[\textbf{O3)}] {\em Transitividad.}\, Si $a\le b$ y $b\le c$, entonces $a \le c$.\pause 
         \end{enumerate}
-
+        \pause 
         \vskip .5cm
 
         Las demostraciones no son difíciles y las dejamos como ejercicios (se encuentran en el apunte). 
 
-        \vskip .5cm
+        \vskip .5cm\pause 
 
         Una relación que satisfaga las tres propiedades anteriores (reflexividad, antisimetría y transitividad) es llamada {\em una relación de orden}. 
         
-        \vskip .5cm
+        \vskip .5cm\pause 
 
         Observar que $<$ {\em no} es una relación de orden, en el sentido de la definición anterior. 
 \end{frame}
@@ -288,11 +288,11 @@ Como  $a\not< b$, entonces vale una de las dos afirmaciones siguientes, $a=b$ o 
 
     A primera vista podría parecer que ya tenemos todas las propiedades que necesitamos de $\mathbb Z$, pero, sorprendentemente, aún falta un axioma de vital importancia. 
     \vskip .5cm
-
+    \pause 
     Observemos, que todos los axiomas que enunciamos también  los cumplen los números racionales $\Q$ y los números  reales $\R$. 
-    \vskip .5cm
+    \vskip .5cm\pause 
     ¿Cuál es la diferencia \textit{fundamental} entre $\Z$ y $\Q$ o  $\R$? 
-    \vskip .5cm
+    \vskip .5cm\pause 
     \begin{figure}[ht]
         \begin{center}
         \begin{tikzpicture}[line width=1pt]    
@@ -303,7 +303,7 @@ Como  $a\not< b$, entonces vale una de las dos afirmaciones siguientes, $a=b$ o 
         \end{center}
         \caption{El dibujo correcto de $\mathbb Z$.}\label{f1.2}
     \end{figure}
-    
+    \pause 
     \begin{figure}[ht]    
         \begin{center}
         \begin{tikzpicture}[line width=1pt]    
@@ -323,15 +323,15 @@ Como  $a\not< b$, entonces vale una de las dos afirmaciones siguientes, $a=b$ o 
 
 \begin{frame}
     \frametitle{Axioma de buena ordenación}
-    
+    \pause 
     Supongamos que $X$ es un subconjunto de $\mathbb Z$; entonces diremos que el entero $b$ es una {\em cota inferior}\index{cota inferior} de $X$ si
 $$
 b\le x \qquad \text{ para todo } \ x \in X.
 $$
-
+\pause 
 \vskip .5cm
 Algunos subconjuntos no tienen cotas inferiores: por ejemplo, el conjunto de los enteros negativos $-1, -2, -3, \ldots$, claramente no tiene cota inferior. 
-
+\pause 
 \vskip .5cm
 \begin{definicion}
     Una cota inferior de un conjunto $X$ que es a su vez es un elemento de $X$, es conocido como el {\em mínimo}\index{mínimo} de X.
@@ -344,13 +344,13 @@ Algunos subconjuntos no tienen cotas inferiores: por ejemplo, el conjunto de los
 \begin{frame}
     \frametitle{Axioma de buena ordenación}
     Nuestro último axioma para $\mathbb Z$ afirma algo que es (aparentemente) una propiedad obvia.
-    \vskip .5cm
+    \vskip .5cm\pause 
 \begin{enumerate}
 \item[\textbf{I12)}] Si $X$ es un subconjunto de $\mathbb Z$ que no es vacío y tiene una cota inferior, entonces $X$ tiene un mínimo.
 \end{enumerate}
 \vskip .8cm
-El axioma (\textbf{I12}) es conocido como el     \textit{axioma de buena ordenación}  o  \textit{axioma del buen orden} o  \textit{principio de buena ordenación}.
-\vskip .8cm
+El axioma (\textbf{I12}) es conocido como el     \textit{axioma de buena ordenación}  o  \textit{axioma del buen orden} o  \textit{principio de buena ordenación}.\pause 
+\vskip .8cm\pause 
 Observar que $\Q$ o $\R$ con $<$ \textit{no} satisfacen el axioma de buena ordenación. 
 \vskip .8cm
 \end{frame}
@@ -360,10 +360,10 @@ Observar que $\Q$ o $\R$ con $<$ \textit{no} satisfacen el axioma de buena orden
     \frametitle{}
     El hecho de que haya espacios vacíos entre los enteros nos lleva a decir que el conjunto $\mathbb Z$ es \textit{discreto} y es esta propiedad la que da origen al nombre ``matemática discreta''. 
     \vskip .5cm
-
+    \pause 
     
     En cálculo y análisis, los procesos de límite son de fundamental importancia, y es preciso usar aquellos sistemas numéricos que son \textit{continuos}, en vez de los discretos.
-
+    \pause 
     \vskip .5cm
 
     Repitamos los gráficos de la p. \ref{dibujo-de-z}
@@ -379,7 +379,7 @@ Observar que $\Q$ o $\R$ con $<$ \textit{no} satisfacen el axioma de buena orden
         \end{center}
         \caption{El dibujo correcto de $\mathbb Z$.}
     \end{figure}
-    
+    \pause 
     \begin{figure}[ht]    
         \begin{center}
         \begin{tikzpicture}[line width=1pt]    
@@ -402,19 +402,19 @@ Observar que $\Q$ o $\R$ con $<$ \textit{no} satisfacen el axioma de buena orden
     El siguiente resultado es obvio, pero  debe ser demostrado. 
     \vskip .5cm
 
-    
+    \pause 
 
 
 \begin{proposicion}\label{prop-0-menor-que-1}
 $1$ es el menor entero mayor que $0$.
 \end{proposicion}
 
-\vskip .5cm
+\vskip .5cm\pause 
 
 Es posible hacer la demostración con las herramientas que ya poseemos (si no ¡faltaría algún axioma!). 
 
 \vskip .5cm
-
+\pause 
 Sin embargo, la demostración es relativamente compleja y el estudiante interesado la puede ver en el apunte. 
 
 
