--- a/2021-1/apunte/Cap.01.tex
+++ b/2021-1/apunte/Cap.01.tex
@@ -283,11 +283,11 @@ Probaremos ahora que no existe $a$ entero tal que $ 0<a<1$ y lo haremos por el a
 $$
 X=\{a\in\mathbb Z: 0<a<1\}.
 $$
-La  suposición que hicimos implica que $X$ es no vacío.  Dado que todos los elementos de $X$ son positivos, $X$ es un subconjunto de $\mathbb Z$ acotado inferiormente ($0$ es cota inferior). Por el axioma del buen orden\ref{axioma-i12} resulta que $X$ tiene un elemento mínimo, que llamaremos $a_0$, y cumple
+La  suposición que hicimos implica que $X$ es no vacío.  Dado que todos los elementos de $X$ son positivos, $X$ es un subconjunto de $\mathbb Z$ acotado inferiormente ($0$ es cota inferior). Por el axioma del buen orden (axioma \ref{axioma-i12}) resulta que $X$ tiene un elemento mínimo, que llamaremos $a_0$, y cumple
 $$
 0<a_0<1. 
 $$
-Usamos ahora la compatibilidad del  producto con  la relación de orden \ref{axioma-i11}:  por un lado multiplicamos por $a_0$ la desigualdad $0<a_0$ y obtenemos $0<a_0^2$,  y por otro lado multiplicamos por $a_0$ la desigualdad $a_0<1$ y obtenemos $a_0^2<a_0$. Es decir
+Usamos ahora la compatibilidad del  producto con  la relación de orden (\ref{axioma-i11}):  por un lado multiplicamos por $a_0$ la desigualdad $0<a_0$ y obtenemos $0<a_0^2$,  y por otro lado multiplicamos por $a_0$ la desigualdad $a_0<1$ y obtenemos $a_0^2<a_0$. Es decir
 $$
  0<a_0^2<a_0<1.
 $$
