--- a/2021-1/beamer/C03_md1.tex
+++ b/2021-1/beamer/C03_md1.tex
@@ -1,8 +1,8 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -117,6 +117,7 @@
 
 \begin{frame}\frametitle{Definiciones recursivas} 
 
+    \pause
 
 Sea $\mathbb N$ el conjuntos de enteros positivos, esto es
 $$
@@ -126,19 +127,23 @@ y denotemos $\mathbb N_0$ el conjunto $\mathbb N \cup \{0\}$, esto
 es
 $$
 \mathbb N_0 = \{ n \in \mathbb Z | n\ge 0\}.
-$$
-$\mathbb{N}$  es llamado el conjunto de  \textit{números naturales}. Si $X$ es un subconjunto de $\mathbb N$ (o de $\mathbb N_0$)
-entonces automáticamente tiene una cota
-inferior, pues cada elemento $x$ de $X$ satisface $x\ge 1$ (o
-$x\ge 0$). As{í}, en este caso el axioma del buen orden toma la
-forma
-$$
-\begin{aligned}
-&\text{\it si $X$ es un subconjunto no vacío de $\mathbb N$ o $\mathbb N_0$ entonces $X$
-	tiene un mínimo.}
-\end{aligned}
-$$
-Esta la forma más usada en la práctica.
+$$\pause
+$\mathbb{N}$  es llamado el conjunto de  \textit{números naturales}.     \pause
+\vskip .4cm
+\begin{itemize}
+    \item $X \subset \mathbb N$ (o de $\mathbb N_0$) $\Rightarrow$ $X$ tiene cota inferior ($0$ o un $x <0$).\vskip .4cm    \pause
+    \item As{í}, en este caso el axioma del buen orden toma la
+    forma\vskip .4cm 
+
+    \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
+    \begin{beamercolorbox}[wd=1.0\textwidth,rounded=true,shadow=true]{postit}%
+        \begin{center}\textit{\qquad \quad si $X \subset \mathbb N \vee X \subset\mathbb N_0$, no vacío \; $\Rightarrow$ \; $X$ tiene un mínimo.}\vskip .4cm
+\end{center}
+\end{beamercolorbox}
+    
+
+\end{itemize}
+
 
 \end{frame}
 
@@ -146,22 +151,22 @@ Esta la forma más usada en la práctica.
 
 \begin{frame}\frametitle{ }  
 	
-Una sucesión $u_n$ puede ser dada en forma explícita, por ejemplo
+Una sucesión $u_n$ puede ser dada en forma explícita, por ejemplo  \pause
 \begin{itemize}
-	\item $u_n=3n+2$, o
+	\item $u_n=3n+2$,   \pause o
 	\item $w_n =(n+1)(n+2)(n+3)$. 
 \end{itemize}
-
+\pause
 \medspace
 
-En este caso es fácil calcular algún valor de cada sucesión, por ejemplo
+En este caso es fácil calcular algún valor de cada sucesión, por ejemplo \pause
 \begin{equation*}
 	u_5 = 3\cdot 5 +2= 17 \; \text{ o } \; w_3 = 4\cdot 5 \cdot 6 = 120
 \end{equation*}
 
 \medspace
 
-
+\pause
 Cuando una sucesión puede expresar se como combinación de un número determinado de operaciones elementales, diremos que tiene una \textit{fórmula cerrada.}
 	
 \end{frame}
@@ -170,24 +175,24 @@ Cuando una sucesión puede expresar se como combinación de un número determina
 
 \begin{frame}\frametitle{ }  
 
-A veces la sucesión que nos interesa no tiene una fórmula \textit{cerrada} como las anteriores y podemos expresarla en forma \textit{recursiva}. Por ejemplo,
+A veces la sucesión que nos interesa no tiene una fórmula \textit{cerrada} como las anteriores y podemos expresarla en forma \textit{recursiva}.  \pause Por ejemplo,
 
 \medspace
 
 \begin{itemize}
-	\item $u_1=1$, $u_2=2$, (casos base) 
-	\item $u_n =u_{n-1} +u_{n-2}$, para $n\ge 3$ (caso recursivo). 
+	\item $u_1=1$, $u_2=2$, (casos base)   \pause
+	\item $u_n =u_{n-1} +u_{n-2}$, para $n\ge 3$ (caso recursivo).   \pause
 \end{itemize} 
 
 \medspace
 
 La anterior es la \textit{sucesión de Fibonacci.} Entonces podemos calcular los término $n \ge 3$  de la sucesión usando la recursión:
 
-\medspace
+\medspace  \pause
 
 \begin{itemize}
-	\item $u_3 =  u_2 + u_1 =  2 +1=3$,
-	\item $u_4 =  u_3 + u_2 = 3 +2 =5$
+	\item $u_3 =  u_2 + u_1 =  2 +1=3$,  \pause
+	\item $u_4 =  u_3 + u_2 = 3 +2 =5$  \pause
 	\item $u_5 =  u_4 + u_3 = 5 +3 =8$
 \end{itemize} 
 y así sucesivamente.
@@ -200,16 +205,16 @@ y así sucesivamente.
 	 		\item $ u_1=3$, $u_2=5$ y
 	 		\item $u_n=3 u_{n-1} - 2 u_{n-2}$ para $n\geq 3$.
 	 	\end{itemize}
- 	Calcular $u_n$ para $n \le 5$.
+ 	Calcular $u_n$ para $n \le 5$.\pause 
 	 \end{ejemplo}
-	\begin{proof}[Solución] Los valores para $n=1$ y $n=2$ ya los conocemos. La fórmula recursiva es la que nos servirá para conocer los siguientes términos
+	\begin{solucion} \pause Los valores para $n=1$ y $n=2$ ya los conocemos. La fórmula recursiva es la que nos servirá para conocer los siguientes términos
 	\begin{itemize}
-	\pause	\item $u_{3} = 3 u_{2} - 2 u_{1}\pause = 3 \cdot 5 - 2 \cdot 3 = 9$,
-	\pause	\item $u_{4} = 3 u_{3} - 2 u_{2}\pause = 3 \cdot 9 - 2 \cdot 5 = 17$,
-	\pause	\item $u_{5} = 3 u_{4} - 2 u_{3}\pause = 3 \cdot 17 - 2 \cdot 9  = 33$,
+	\pause \item $u_{3} = 3 u_{2} - 2 u_{1}\pause = 3 \cdot 5 - 2 \cdot 3 = 9$,
+	\pause \item $u_{4} = 3 u_{3} - 2 u_{2}\pause = 3 \cdot 9 - 2 \cdot 5 = 17$,
+	\pause \item $u_{5} = 3 u_{4} - 2 u_{3}\pause = 3 \cdot 17 - 2 \cdot 9  = 33$,
 
 	\end{itemize}
-	\end{proof}
+	\end{solucion}
 	
 	 
 	
@@ -218,18 +223,18 @@ y así sucesivamente.
 \begin{frame}\frametitle{} 
  En base al resultado podemos,  en este caso, adivinar una fórmula general para $u_n$. Escribamos de nuevo los valores de la sucesión para $n \le 5$. 
  
- \medspace 
+ \medspace \pause 
  
  \begin{itemize}
-  	\item $ u_1=3$, 
- 	\item $u_2=5$,
- 	\item $u_{3} = 9$,
- 	\item $u_{4} = 17$,
+  	\item $ u_1=3$, \pause 
+ 	\item $u_2=5$,\pause 
+ 	\item $u_{3} = 9$,\pause 
+ 	\item $u_{4} = 17$,\pause 
  	\item $u_{5} = 33$,
 \end{itemize}
 
 \medspace 
-
+\pause 
 \pause Observando cuidadosamente estos valores podemos darnos cuenta que:
 	
 \end{frame}
@@ -237,33 +242,35 @@ y así sucesivamente.
 \begin{frame}\frametitle{} 
 
 	\begin{itemize}
-		\item $ u_1=3 = 2 +1 = 2^1 + 1$, 
-		\item $u_2=5 = 4 +1 = 2^2 + 1$,
-		\item $u_{3} = 9 = 8 +1 = 2^3 + 1$,
-		\item $u_{4} = 17 = 16 +1 = 2^4 + 1$,
-		\item $u_{5} = 33 = 32 +1 = 2^5 + 1$,
+		\item $ u_1=3 = 2 +1 = 2^1 + 1$, \pause 
+		\item $u_2=5 = 4 +1 = 2^2 + 1$,\pause 
+		\item $u_{3} = 9 = 8 +1 = 2^3 + 1$,\pause 
+		\item $u_{4} = 17 = 16 +1 = 2^4 + 1$,\pause 
+		\item $u_{5} = 33 = 32 +1 = 2^5 + 1$,\pause 
 	\end{itemize}
 \medspace 
 
-Ahora sí,  claramente podemos deducir que (posiblemente) $$u_{n} =  2^n + 1.$$ La clase que viene aprenderemos un método (principio de inducción) que nos permitirá probar este tipo de afirmaciones. 
+Ahora sí,  claramente podemos deducir que (posiblemente) 
+$$u_{n} =  2^n + 1.$$ \pause 
+La clase que viene aprenderemos un método (principio de inducción) que nos permitirá probar este tipo de afirmaciones. 
 	
 \end{frame}
 
 
 
 \begin{frame}\frametitle{} 
-	El método de definición recursiva aparecerá bastante seguido en la materia. Existen otras formas de este procedimiento que se ``esconden'' por su notación. ¿Qué significan las siguientes expresiones?
+	El método de definición recursiva aparecerá bastante seguido en la materia. Existen otras formas de este procedimiento que se ``esconden'' por su notación. \pause ¿Qué significan las siguientes expresiones?
 	$$
 	\sum_{r=1}^{n} r,\qquad 1+2+3+\cdots +n.
-	$$
-	Ambos significan que sumamos los primeros $n$ números naturales, pero cada uno contiene un misterioso símbolo, $\sum$ y $\cdots$,
+	$$\pause 
+	Ambas significan que sumamos los primeros $n$ números naturales, pero cada uno contiene un misterioso símbolo, $\sum$ y $\cdots$,
 	respectivamente. 
 	
 	\medspace 
-	
+	\pause 
 	Lo que deberíamos decir es que cada uno de ellos
 	es equivalente a la expresión $s_n$, dada por la siguiente
-	definición recursiva:
+	definición recursiva:\pause 
 	$$
 	s_1= 1, \qquad s_n = s_{n-1} + n, \qquad n\ge 2.
 	$$
@@ -273,10 +280,10 @@ Ahora sí,  claramente podemos deducir que (posiblemente) $$u_{n} =  2^n + 1.$$ 
 
 
 \begin{frame}\frametitle{} 
-\begin{definicion} Sea $n \in \mathbb N$ sean $a_i$,  $1 \le i \le n$ una secuencia de números (enteros, reales, etc.). Entonces $\sum_{i=1}^{n} a_i$  denota la función recursiva definida  
+\begin{definicion} Sea $n \in \mathbb N$ sean $a_i$,  $1 \le i \le n$ una secuencia de números (enteros, reales, etc.).\pause  Entonces $\sum_{i=1}^{n} a_i$  denota la función recursiva definida  \pause 
 	$$
 	\sum_{i=1}^{1} a_i= a_1, \qquad \sum_{i=1}^{n} a_i = \sum_{i=1}^{n-1} a_i+ a_{n} \quad (n\ge 2).
-	$$
+	$$\pause 
 	En  este caso  decimos que  $\displaystyle\sum_{i=1}^{n} a_i$ es la \textit{sumatoria} de los $a_i$ de $i=1$  a $n$. 
 \end{definicion}
 	
@@ -285,10 +292,10 @@ Ahora sí,  claramente podemos deducir que (posiblemente) $$u_{n} =  2^n + 1.$$ 
 
 \begin{frame}\frametitle{} 
 \begin{definicion}
-	El símbolo $\prod_{i=1}^{n} a_i$ denota la función recursiva definida  
+	El símbolo $\displaystyle\prod_{i=1}^{n} a_i$ denota la función recursiva definida  \pause 
 	$$
 	\prod_{i=1}^{1} a_i= a_1, \qquad \prod_{i=1}^{n} a_i = \prod_{i=1}^{n-1} a_i \cdot  a_{n} \quad (n\ge 2).
-	$$
+	$$\pause 
 	En  este caso  decimos que  $\displaystyle\prod_{i=1}^{n} a_i$ es la \textit{productoria} de los $a_i$ de $i=1$  a $n$. 
 \end{definicion}
 	
@@ -299,18 +306,18 @@ Ahora sí,  claramente podemos deducir que (posiblemente) $$u_{n} =  2^n + 1.$$ 
 
 
 \begin{frame}\frametitle{} 
-	Una definición muy utilizada es la de  $n!$ (que se lee $n$ {\it factorial}). Intuitivamente podemos definirlo como 
+	Una definición muy utilizada es la de  $n!$ (que se lee $n$ {\it factorial}). Intuitivamente podemos definirlo como \pause 
 	$$
 	n!=1 \cdot 2 \cdot 3 \cdots n,
-	$$
+	$$\pause 
 	y el significado es bastante claro para cualquiera.
 	
-	\medspace 
+	\medspace \pause 
 	
 	Pero para precisar (y hacerlo claro para una computadora) debemos usar una definición recursiva:
-	
+	\pause 
 	\begin{itemize}
-		\item $1! = 1$, 
+		\item $1! = 1$, \pause 
 		\item $n! = (n-1)! \cdot n$.
 	\end{itemize}
 	
@@ -321,14 +328,14 @@ Ahora sí,  claramente podemos deducir que (posiblemente) $$u_{n} =  2^n + 1.$$ 
 
 \begin{frame}\frametitle{} 	
 	Observar que también podemos definir 
-	
+	\pause 
 	$$n! = \prod_{i=1}^{n} i.$$ 
-	
+	\pause 
 	Pese a que esta última fórmula parece cerrada, oculta la definición recursiva de $\prod$.
 	
 	\medspace 
 	
-	
+	\pause 
 	Es un resultado conocido  que la función $n!$ \textit{no} admite  una fórmula cerrada. 
 	
 \end{frame}
@@ -343,10 +350,10 @@ Ahora sí,  claramente podemos deducir que (posiblemente) $$u_{n} =  2^n + 1.$$ 
 
 
 
- Finalmente definiremos  la ``$n$-ésima potencia'' de un número: sea $x$ un  número, si $n \in \mathbb N $ definimos
+ Finalmente definiremos  la ``$n$-ésima potencia'' de un número: sea $x$ un  número, si $n \in \mathbb N $ definimos\pause 
  $$
  x^1=x,\qquad x^n= x \cdot x^{n-1} \quad (n\ge 2).
- $$
+ $$\pause 
  Por completitud,  definimos $x^0=1$ cuando $x \ne 0$ y  dejamos indefinido $0^0$. 
 
 
