--- a/2021-1/beamer/C03_md1.tex
+++ b/2021-1/beamer/C03_md1.tex
@@ -131,7 +131,7 @@ $$\pause
 $\mathbb{N}$  es llamado el conjunto de  \textit{números naturales}.     \pause
 \vskip .4cm
 \begin{itemize}
-    \item $X \subset \mathbb N$ (o de $\mathbb N_0$) $\Rightarrow$ $X$ tiene cota inferior ($0$ o un $x <0$).\vskip .4cm    \pause
+    \item $X \subset \mathbb N$ (o de $\mathbb N_0$) $\wedge$ $X \ne \emptyset$ $\Rightarrow$ $X$ tiene cota inferior ($0$ o un $x <0$).\vskip .4cm    \pause
     \item As{í}, en este caso el axioma del buen orden toma la
     forma\vskip .4cm 
 
